# trends-fetcher

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: fetch-trends.yml
data/: seen.json
docs/: proposal-curation.md
proposals/: 2026-04-22.md
scripts/: fetch_trends.py
src/trends_fetcher/: __init__.py  cli.py  fetcher.py
tests/: test_cli.py  test_fetcher.py
trends/: 2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  2026-05-03.md  2026-05-04.md
